Add new engage of positions/istants (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -6,11 +6,17 @@
   pages={88--98},
   year={2006}
 }
-@misc{hbird,
-  title = {See Hummingbirds Fly, Shake, Drink in Amazing Slow Motion},
-  author = {National Geographic},
-  howpublished = {\url{https://youtu.be/RtUQ_pz5wlo}},
-  note = {Data consultazione: 2021-02-01}
+@misc{beirut,
+  title = {Beirut, l'enorme esplosione investe l'uomo che sta girando il video: l'onda d'urto in soggettiva},
+  author = {La Repubblica},
+  howpublished = {\url{https://youtu.be/2-6N-F34M1w}},
+  note = {Data consultazione: 2021-02-21}
+}
+@misc{pool,
+  title = {Bigliardo show},
+  author = {fabry bel},
+  howpublished = {\url{https://youtu.be/Q9nVNbUHykA}},
+  note = {Data consultazione: 2021-02-21}
 }
 @book{arons1997teaching,
   title={Teaching introductory physics},
