--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -102,7 +102,7 @@ concetto di \emph{legge oraria}.
 
 \section{Engage}
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Computer
 \end{itemize}
 
@@ -118,31 +118,53 @@ sono solo alcuni esempi.
 }
 il video di un fenomeno fisico riprodotto \emph{in reverse} (ovvero ribaltando
 l'asse temporale). Il fenomeno fisico rappresentato dovrebbe essere scelto
-in modo che sia difficile (o impossibile) distinguere se il video viene
-riprodotto in reverse oppure no. Il moto di un pendolo semplice,
-di un \emph{pendulum wave} o di altri moti periodici costituiscono buoni
-esempi.
-
-Nel contesto di questo progetto si è scelto il video in \emph{slow motion}
-di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird})
+in modo che sia semplice distinguere se il video viene
+riprodotto in reverse oppure no.
+Il fenomeno di una goccia d'inchiostro che diffonde in un bicchiere
+d'acqua, quello del lancio in aria di polvere di gesso colorata
+o qualsiasi altro esempio di sistema che passa da uno stato
+ordinato ad uno disordinato costitutiscono buoni esempi.
+Nel contesto di questo progetto si è scelto di mostrare
+il filmato della deflagrazione di un deposito di nitrato
+di ammonio, avvenuta nell'Agosto 2020 a Beirut
 \footnote{
-\`E possibile scaricare il video presso
-\textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}}
-. L'indirizzo del video originale si trova nei Riferimenti\cite{hbird}.
-}.
-Solamente la componente video, e non quella audio, è stata invertita per
-aumentare l'effetto di inganno.
+          \`E possibile scaricare il video presso
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/beirut_explosion_reverse.mp4?raw=true}{questa pagina web}}
+          . L'indirizzo del video originale si trova nei Riferimenti\cite{beirut}.
+}
+(vedi Figura \ref{fig:beirut_explosion}).
 \begin{figure}
 \centering
-  \includegraphics[width=\textwidth]{Hummingbird}
-  \caption{Un frame del video di un colibrì in volo che si nutre da un tubicino.}
-  \label{fig:hummingbird}
+  \includegraphics[width=\textwidth]{beirut_explosion}
+  \caption{Un frame del video dell'esplosione di Beirut dell'Agosto 2020.}
+  \label{fig:beirut_explosion}
 \end{figure}
-Il docente in seguito chiede agli studenti di descrivere quanto viene
-visualizzato, e solamente infine svela che il video è riprodotto in
-reverse. In questo modo l'insegnante ha l'occasione di far notare
-allo studente, e lo esplicita, che per studiare qualsiasi fenomeno fisico
-occorrono chiari riferimenti spaziali e temporali.
+Successivamente il professore mostra un secondo filmato, ma questa
+volta non sono stati applicati particolari effetti in post produzione.
+In questo caso la scelta del fenomeno non è così rilevante, purché venga
+mostrato un fenomeno dinamico ed interessante.
+Nell'ambito di questo percorso didattico
+vengono riprodotti alcuni secondi tratti dal video di una partita di biliardo
+\footnote{
+          \`E possibile scaricare il video presso
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/pool.mp4?raw=true}{questo indirizzo web}}
+          . L'indirizzo del video originale si trova nei Riferimenti\cite{pool}.
+}.
+Il docente chiede agli alunni di descrivere quanto appena osservato.
+Si ritiene che tutti gli studenti siano in grado di riconoscere
+che il primo video è stato sottoposto ad un'inversione temporale,
+mentre questo non è vero per il secondo video.
+Gli studenti potrebbero affermare: “Il primo video è stato riprodotto al contrario,
+mentre il secondo no” o anche “Quello che accade alla fine del primo video
+nella realtà accadrebbe all’inizio”. Sulla base di simili risposte il professore
+fa notare alla classe che tutti gli studenti sono stati in grado di riconoscere con
+facilità quale dei due video è stato riprodotto \emph{in reverse}.
+Egli infine afferma che ognuno di noi possiede un'innata capacità di
+riconoscere il verso dello scorrere del tempo:
+il tempo scorre in un solo verso, cioè \emph{in avanti} e gli eventi si svolgono
+in un ordine predefinito. Questa
+caratteristica è rappresentabile nel contesto di un esperimento di fisica
+utilizzando un asse temporale ordinato che si legge da sinistra verso destra.
 
 \section{Explore}
 Questa fase viene svolta da ciascun studente a casa. Il professore propone agli
