Fix some typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -154,9 +154,9 @@ Il docente chiede agli alunni di descrivere quanto appena osservato.
 Si ritiene che tutti gli studenti siano in grado di riconoscere
 che il primo video è stato sottoposto ad un'inversione temporale,
 mentre questo non è vero per il secondo video.
-Gli studenti potrebbero affermare: “Il primo video è stato riprodotto al contrario,
-mentre il secondo no” o anche “Quello che accade alla fine del primo video
-nella realtà accadrebbe all’inizio”. Sulla base di simili risposte il professore
+Gli studenti potrebbero affermare: ``Il primo video è stato riprodotto al contrario,
+mentre il secondo no'' o anche ``Quello che accade alla fine del primo video
+nella realtà accadrebbe all’inizio''. Sulla base di simili risposte il professore
 fa notare alla classe che tutti gli studenti sono stati in grado di riconoscere con
 facilità quale dei due video è stato riprodotto \emph{in reverse}.
 Egli infine afferma che ognuno di noi possiede un'innata capacità di
