Fix some typos and syntax errors (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -123,7 +123,7 @@ riprodotto in reverse oppure no.
 Il fenomeno di una goccia d'inchiostro che diffonde in un bicchiere
 d'acqua, quello del lancio in aria di polvere di gesso colorata
 o qualsiasi altro esempio di sistema che passa da uno stato
-ordinato ad uno disordinato costitutiscono buoni esempi.
+ordinato ad uno disordinato costituiscono buoni esempi.
 Nel contesto di questo progetto si è scelto di mostrare
 il filmato della deflagrazione di un deposito di nitrato
 di ammonio, avvenuta nell'Agosto 2020 a Beirut
@@ -784,7 +784,7 @@ infatti evidenzia che \emph{in ogni istante} la velocità
 dell'astronauta in caduta sta cambiando (e nel caso particolare aumenta).
 Il professore aiuta gli studenti a giungere ad una comprensione
 più lucida di questa realizzazione, assegnando un'attività da svolgere
-a casa mediante il sotware \emph{GeoGebra}
+a casa mediante il software \emph{GeoGebra}
 \footnote{
           GeoGebra è una suite \emph{Free Software} di programmi per la didattica della
           matematica
@@ -829,8 +829,8 @@ rappresentare sul grafico la velocità media dell’astronauta in questo preciso
 tratto, compreso tra i punti A e B?'' e ancora ``Cosa accade se provo a muovere il punto B,
 tenendo fissato il punto A?''. Ogni alunno deve provare a rispondere individualmente a queste
 domande, come compito per casa,
-utilizzando GeoGebra. L’insegnante invia agli studenti il file progetto contente
-la curva mostrata in classe; In questo modo tutti gli studenti possano
+utilizzando GeoGebra. L’insegnante invia agli studenti il file progetto contenente
+la curva mostrata in classe; In questo modo tutti gli studenti possono
 ragionare sul problema da un punto di partenza comune.
 Tornati in classe, gli studenti vengono suddivisi in gruppi di cinque per
 confrontarsi sui risultati ottenuti
@@ -857,7 +857,7 @@ possibile al punto A
 \footnote{
           Non è possibile sovrapporre perfettamente i punti A e B senza che la retta secante
           risulti indefinita per il programma. Tuttavia, i punti possono
-          essere avvicinati a tal punto da non poterne più apprezzare la
+          essere avvicinati fino a non poterne più apprezzare la
           distanza.
          }
 (come si vede nella Figura \ref{fig:geogebra}).
@@ -1261,7 +1261,7 @@ Il compito di scegliere l'inclinazione del piano, il modo in cui
 collocare il telefono sopra di esso e altre osservazioni pratiche
 sono lasciate allo studente.
 
-Durante la lezione successiva l'insegnate chiede agli studenti
+Durante la lezione successiva l'insegnante chiede agli studenti
 di condividere la loro esperienza riguardo l'esperimento
 compiuto a casa.
 A questo scopo egli divide la classe in gruppi di
@@ -1321,7 +1321,8 @@ la velocità del telefono è ancora nulla. Se così non fosse, sarà il
 docente a suggerire alla classe queste valutazioni.
 Grazie all'esperienza nel leggere grafici acquisita nei moduli precedenti,
 è plausibile che gli studenti abbiano notato che nel suddetto istante
-l'accelerazione passa da un valore nullo ad un valore non nullo, che si
+l'accelerazione passa a un valore non nullo partendo da un valore nullo
+all'istante precedente. Questo valore si
 mantiene costante (a meno di oscillazioni) per tutto la durata
 del moto sul piano inclinato.
 Il docente sottolinea quanto osservato dagli studenti, affermando
