Fix more typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -120,7 +120,7 @@ il video di un fenomeno fisico riprodotto \emph{in reverse} (ovvero ribaltando
 l'asse temporale). Il fenomeno fisico rappresentato dovrebbe essere scelto
 in modo che sia semplice distinguere se il video viene
 riprodotto in reverse oppure no.
-Il fenomeno di una goccia d'inchiostro che diffonde in un bicchiere
+Il fenomeno della diffusione di una goccia d'inchiostro in un bicchiere
 d'acqua, quello del lancio in aria di polvere di gesso colorata
 o qualsiasi altro esempio di sistema che passa da uno stato
 ordinato ad uno disordinato costituiscono buoni esempi.
@@ -851,7 +851,7 @@ risultato con GeoGebra e domanda agli studenti che cosa hanno scoperto
 modificando la durata dell'intervallo di tempo tra i due punti.
 Si presume che qualche alunno abbia osservato
 che la pendenza della retta secante varia al variare della posizione del punto
-B rispetto al punto A, fisso. L’insegnante quindi tramite lo slider sposta il
+B rispetto al punto A, che rimane fisso. L’insegnante quindi tramite lo slider sposta il
 punto B sul grafico per mostrare quanto discusso, fino ad avvicinarlo il più
 possibile al punto A
 \footnote{
@@ -1199,7 +1199,7 @@ analizzato come \emph{uniformemente accelerato}.
 \section{Extend}
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
-      di discussione tra studenti + 20 minuti di dialogo con il
+      di discussione tra studenti + 20\textsuperscript{$\prime$} di dialogo con il
       docente.
 \item \textbf{Materiale:} Smartphone, Computer, Oggetti domestici
 \end{itemize}
@@ -1323,7 +1323,7 @@ Grazie all'esperienza nel leggere grafici acquisita nei moduli precedenti,
 è plausibile che gli studenti abbiano notato che nel suddetto istante
 l'accelerazione passa a un valore non nullo partendo da un valore nullo
 all'istante precedente. Questo valore si
-mantiene costante (a meno di oscillazioni) per tutto la durata
+mantiene costante (a meno di oscillazioni) per tutta la durata
 del moto sul piano inclinato.
 Il docente sottolinea quanto osservato dagli studenti, affermando
 che in effetti velocità e accelerazione sono grandezze ben distinte
